

<resources>
    <string name="app_name">Sudowoodo</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Enter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <color name="black">#000000</color>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_water_schedule">WaterSchedule</string>
    <string name="title_activity_plant_list">PlantList</string>
    <string name="location">Location</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temperature</string>
    <string name="title_activity_button_add_a_new_plant">Add A Plant</string>
    <string name="fern">Ferns</string>
    <string name="flowering">Flowering</string>
    <string name="conifer">conifer</string>
    <string name="moss">Moss</string>
    <string name="displaycategories">Choose you plant from the categories:</string>
    <string name="title_activity_add_temperate">Add Temperate</string>
    <string name="title_activity_add_desert">Add Desert</string>
    <string name="title_activity_add_cool">Add Cool</string>
    <string name="title_activity_add_tropical">Add Tropical</string>

    <string name="title_activity_cool_pop_up">CoolPopUp</string>
    <string name="title_activity_desert_pop_up">DesertPopUp</string>
    <string name="title_activity_temperate_pop_up">TemperatePopUp</string>
    <string name="title_activity_tropical_pop_up">TropicalPopUp</string>
    <string name="TemperateInfo">Every other day.  Every day if weather is really dry or hot.</string>
    <string name="TropicalInfo">Hibiscus plants require consistently moist soil to produce the most blooms.
                                Water hibiscus plants at least once a day, except on rainy days, making certain
                                to saturate the soil around the root ball completely. Increase watering to twice
                                or three times a day when temperatures exceed 80 degrees Fahrenheit.</string>
    <string name="coolInfo">Water thoroughly 3x a week if they are planted in a garden. If the weather is dry,
                            then you’ll have to water more frequently by watering every other day.</string>
    <string name="DesertInfo">During extremely hot weather, some cacti may need to be watered 2 - 3 times per week,
                          depending on the dryness of the soil. During winter months, watering plants every 2 weeks
                          should be sufficient. Let soil dry out between watering. (Indoors) During winter months or
                          when plant is dormant, water once a month.</string>
    <string name="title_activity_add_plant_test">Sign in</string>

    
    <!-- Parse Keys -->
    <string name="parse_app_id">QR0kncaDZr4y8jxbOwqBOiPGghhRm1UKPiXA4Jl3</string>
    <string name="parse_client_id">EHuNBEuSo3qkBaxMgPdp5NxqH9bwJztDNyglmIk6</string>
    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Enter Same Password Again</string>
    <string name="prompt_sign_up">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test_add_aplant">TestAddAPlant</string>
    <string name="title_activity_water_cool">WaterCool</string>
    <string name="title_activity_water_temperate">WaterTemperate</string>
    <string name="title_activity_water_tropical">WaterTropical</string>
    <string name="title_activity_water_desert">WaterDesert</string>
    <string name="title_activity_sign_up_or_login">SignUpOrLoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="error_intro">Please</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_join">, and</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_end">.</string>
    <string name="title_activity_list_view_adapter">ListViewAdapter</string>

    <!-- Plant List Strings -->
    <string name="nicknameLabel">"Nickname : "</string>
    <string name="typeLabel">"Type : "</string>
    <string name="lastWateredLabel">"Last Watered : "</string>


    <string name="title_activity_single_item_view">SingleItemView</string>
    <string name="title_activity_listview_main">ListviewMain</string>
    <string name="title_activity_person_test">PersonTest</string>
    <string name="title_activity_test_result1">testResult1</string>
    <string name="title_activity_test_result2">testResult2</string>
    <string name="title_activity_test_add_cool_scenario">testAddCoolScenario</string>

</resources>

